# StoryToVideo

./: Assets.qml  CMakeLists.txt  Create.qml  Main.qml  Navigation.qml  NetworkManager.h  Preview.qml  Storyboard.qml  main.cpp
client/qml/: ShotDetail.qml
client/src/: NetworkManager.cpp
docs/: SD部署.md
sd-turbo-deploy/: Dockerfile  main.py  requirements.txt
